# ShipAgent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  pyproject.toml  shipagent-core.spec  test_invoice.txt  test_preview_emission.py
.github/workflows/: docker.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/: 1-foundation-CONTEXT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: architecture.md  demo.md  enhancementproposal.md  extension-guide.md  landed_cost_debug_report.md  production-readiness-handoff.md  rating.yaml  shipping.yaml  ups-mcp-integration-guide.md
docs/plans/: 2026-01-26-integration-expansion-design.md  2026-01-26-integration-expansion-implementation.md  2026-01-26-integration-testing-plan.md  2026-02-09-ups-mcp-pivot-design.md  2026-02-09-ups-mcp-pivot-implementation.md  2026-02-10-chat-completion-artifacts-design.md  2026-02-10-stress-test-prompts-design.md  2026-02-12-claude-sdk-orchestration-implementation.md  2026-02-12-claude-sdk-orchestration-redesign-design.md  2026-02-12-fix-preview-flow-handoff.md  2026-02-13-interactive-shipping-toggle-design.md  2026-02-13-interactive-shipping-toggle-implementation.md  2026-02-14-codebase-cleanup-design.md  2026-02-14-codebase-cleanup-implementation.md  2026-02-14-csv-excel-stress-test-prompts.md  2026-02-15-international-shipping-design.md  2026-02-15-international-shipping-implementation.md  2026-02-15-ups-mcp-v2-implementation.md  2026-02-15-ups-mcp-v2-integration-design.md  2026-02-16-filter-determinism-design.md  2026-02-16-filter-determinism-implementation.md  2026-02-16-headless-automation-design.md  2026-02-16-headless-automation-implementation.md  2026-02-16-pickup-ux-revamp-design.md  2026-02-16-pickup-ux-revamp-implementation.md  2026-02-19-contact-book-feature-proposal.md  2026-02-19-contacts-commands-settings-design.md  2026-02-19-contacts-commands-settings-implementation.md  2026-02-19-github-issues-8-9-10-11-design.md  2026-02-19-github-issues-8-9-10-11-implementation.md  2026-02-20-chat-persistence-ui-optimization-design.md  2026-02-20-chat-persistence-ui-optimization-implementation.md  2026-02-20-fwf-agent-assisted-upload-design.md  2026-02-20-universal-data-ingestion-design.md  2026-02-20-universal-data-ingestion-implementation.md  2026-02-21-settings-connections-design.md  2026-02-21-settings-connections-implementation.md  2026-02-22-production-packaging-design.md  2026-02-22-production-packaging-plan.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: backup.sh  benchmark_preview_latency.py  benchmark_regression_check.py  bump-version.sh  bundle_backend.sh  generate-updater-key.sh  restart.sh  restore.sh  shipagent  start-backend.sh  test_pipeline.py
shipment-processing-platform/app/: globals.css  layout.tsx  page.tsx
shipment-processing-platform/components/: code-section.tsx  cta-section.tsx  features.tsx  footer.tsx  header.tsx  hero.tsx  how-it-works.tsx  integrations.tsx  stats-bar.tsx  terminal-demo.tsx
src/: __init__.py  bundle_entry.py
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/api/: main.py  schemas.py  schemas_conversations.py
src/cli/: __init__.py  auto_confirm.py  config.py  daemon.py  factory.py  http_client.py  main.py  output.py  protocol.py  repl.py  runner.py  watchdog_service.py
src/db/: __init__.py  connection.py  models.py  schema.sql
src/errors/: __init__.py  domain.py  formatter.py  registry.py  ups_translation.py
src/mcp/: __init__.py  ups_client.py
src/orchestrator/: __init__.py  binding_hash.py  filter_compiler.py  filter_config.py  filter_resolver.py  filter_schema_inference.py
src/services/: __init__.py  agent_session_manager.py  attachment_store.py  audit_service.py  batch_engine.py  batch_executor.py  column_mapping.py  command_processor.py  connection_service.py  connection_types.py  contact_service.py  conversation_handler.py  conversation_persistence_service.py  credential_encryption.py  custom_command_service.py  data_source_gateway.py  data_source_mcp_client.py  data_source_service.py  decision_audit_context.py  decision_audit_service.py  errors.py  external_sources_mcp_client.py  filter_constants.py  gateway_provider.py  idempotency.py  international_rules.py  job_service.py  keyring_store.py  label_storage.py  mapping_cache.py  mcp_client.py  paperless_constants.py  runtime_credentials.py  saved_data_source_service.py  settings_service.py  ups_constants.py  ups_mcp_client.py  ups_payload_builder.py  ups_service.py  ups_service_codes.py  (+3 more)
src/utils/: paths.py  redaction.py  runtime.py
tests/: __init__.py  conftest.py  test_bundle_entry.py
tests/api/: __init__.py  conftest.py  test_agent_audit.py  test_auth_middleware.py  test_commands.py  test_commands_routes.py  test_connections.py  test_contacts_routes.py  test_conversation_flow.py  test_conversation_persistence_endpoints.py  test_conversation_schemas.py  test_conversations.py  test_conversations_interactive.py  test_conversations_persistence.py  test_labels.py  (+14 more)
(+459 files in other folders)
