[project]
name = "shipagent"
version = "0.1.0"
description = "Natural language interface for batch shipment processing"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "ShipAgent Team"}
]
dependencies = [
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    # Data Source MCP dependencies
    "fastmcp<3",
    "duckdb>=1.3.0",
    "openpyxl>=3.1.0",
    "python-dateutil>=2.9.0",
    # EDI parser dependencies
    "pydifact>=0.1.8",
    # NL Engine dependencies
    "sqlglot>=26.0.0",
    "anthropic>=0.42.0",
    "jsonschema>=4.0.0",
    "jinja2>=3.0.0",
    # Claude Agent SDK
    "claude-agent-sdk>=0.1.22,<1",
    # Web interface dependencies
    "sse-starlette>=2.0.0",
    "pypdf>=4.0.0",
    # UPS MCP Python fork (pinned to v2 with 18 tools: shipping, tracking, pickup, locator, paperless, landed cost)
    "ups-mcp @ git+https://github.com/matt-hans/ups-mcp.git@616626f816752e3d5b02cb6da329ad8f8ae8a5e9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require external API access (deselect with '-m \"not integration\"')",
]
